feat: add form with input and button
- missing input validations
- missing for attribute for inputs
- connect button click with form submission
- loader
- error showing
- testing
- refactor and possible improvements

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yelp Api</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>Yelp Api</h1>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
