--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <script type="module" src="./app.js"></script>
+    <main></main>
+    <script type="module" src="/app.js"></script>
   </body>
 </html>
