--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Yelp Api</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="/index.css" />
   </head>
   <body>
     <main></main>
