--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Yelpy</title>
+    <title>Yelpy - Vanilla Typescript</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
     />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-
     <link href="/index.css" rel="stylesheet" />
   </head>
   <body>
